function-questions-updated

--- a/HTML-Codes/food-index.html
+++ b/HTML-Codes/food-index.html
@@ -34,6 +34,7 @@
         <li>Veg Momo</li>
         <li>Fried Momo</li>
         <li>Jhol Momo (Soup Momo)</li>
+        <li>Chili Momo</li>
     </ul>
 
     <!-- Ordered List -->
@@ -43,6 +44,7 @@
         <li>Wrap the fillings in small dough circles</li>
         <li>Steam the momos in a momo steamer</li>
         <li>Serve hot with achar (sauce)</li>
+        <li>Enjoy!</li>
     </ol>
 
     <!-- Images -->
@@ -71,10 +73,11 @@
 
     <!-- YouTube Video -->
     <h2>Watch How to Make Momo</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/E96Zs559CX0" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-    </iframe>
+    <iframe width="923" height="519" src="https://www.youtube.com/embed/E96Zs559CX0"
+        title="मोमोज बनानेका सबसे बेस्ट और आसान तरीका, सारे पुराने तरीके भूल जाओगे | Veg Momos with Momos Chutney"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 
 </body>
