navbar-update-with-navigation

--- a/HTML-Codes/food-index.html
+++ b/HTML-Codes/food-index.html
@@ -9,6 +9,26 @@
 
 <body>
 
+    <!-- Navigation Bar Started -->
+    <table width="100%">
+        <tr>
+            <td style="text-align:center;">
+                <a href="#">Home | </a>
+                <a href="/HTML-Codes/about-us.html">About Us |</a>
+                <a href="/HTML-Codes/contact-us.html">Contact Us |</a>
+            </td>
+        </tr>
+
+        <td style="text-align:right;">
+            <button>
+                <a href="/HTML-Codes/form-validation-code.html">Login</a>
+            </button>
+        </td>
+    </table>
+
+    <!-- Nabar Ended -->
+
+
     <!-- Logo -->
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Flag_of_Nepal.svg/726px-Flag_of_Nepal.svg.png"
         alt="Nepal Logo" width="100">
