--- a/HTML-Codes/form-validation-code.html
+++ b/HTML-Codes/form-validation-code.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <!-- Navbar started -->
+    <!-- Navbar started
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -53,7 +53,7 @@
             </div>
         </div>
     </nav> -->
-    <!--Navbar ended
+    <!--Navbar ended -->
 
     <!-- // Input form started -->
     <form>
