projects & codes updated.

--- a/CSS-Style/index.html
+++ b/CSS-Style/index.html
@@ -8,41 +8,38 @@
   </head>
   <body>
     <style>
-            body {
-              /* here, body is a CSS Selector */
-              /* changes the color of the body background */
-              background-color: #6e5656ff;
-              color: #261b1a; /* changes the text color */
-            }
-            #first {
-              color: #de2d1d; /* changes the color of the paragraph text */
-              font-size: 20px; /* changes the font size of the paragraph */
-              text-align: center; /* centers the paragraph text */
-            }
-
-            h1 {
-              font-size: 40px; /* changes the font size of the heading */
-              text-align: center; /* centers the heading text */
-            }
-
-            #2nd {
-              color: #ffffff; /* changes the color of the text */
-              font-size: 25px; /* changes the font size */
-              text-align: center; /* centers the text */
-            }
-            .c1 {
-              color: #f0f0f0; /* changes the color of the text */
-              text-align: center; /* centers the text */
-
-      #menu{
-          text-align: center; /* centers the menu heading */
+      body {
+        /* here, body is a CSS Selector */
+        /* changes the color of the body background */
+        background-color: #6e5656ff;
+        color: #261b1a; /* changes the text color */
+      }
+      #first {
+        color: #de2d1d; /* changes the color of the paragraph text */
+        font-size: 20px; /* changes the font size of the paragraph */
+        text-align: center; /* centers the paragraph text */
+      }
+      h1 {
+        font-size: 40px; /* changes the font size of the heading */
+        text-align: center; /* centers the heading text */
+      }
+      #2nd {
+        color: #ffffff; /* changes the color of the text */
+        font-size: 25px; /* changes the font size */
+        text-align: center; /* centers the text */
+      }
+      .c1 {
+        color: #f0f0f0; /* changes the color of the text */
+        text-align: center; /* centers the text */
+      }
+      #menu {
+        text-align: center; /* centers the menu heading */
       }
       .h2-menu {
-          font-size: 30px; /* changes the font size of the menu heading */
-          font-weight: bold; /* makes the menu heading bold */
-          text-align: center; /* centers the menu heading */
-
-            }
+        font-size: 30px; /* changes the font size of the menu heading */
+        font-weight: bold; /* makes the menu heading bold */
+        text-align: center; /* centers the menu heading */
+      }
     </style>
 
     <h1>Coffee Club</h1>
@@ -50,7 +47,7 @@
       <h2>MENU</h2>
     </div>
     <!--Assigning the id and class -->
-    <div id="first" class="c1, c2, c3">
+    <div id="first" class="c1 c2 c3">
       <!--this is a div with multiple classes-->
       <p>This is a paragraph inside the div.</p>
     </div>
