Contact us page and other compoents added.

--- a/projects/gallery.html
+++ b/projects/gallery.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>CoffeeStory Memories</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Bootstrap for spacing and fonts -->
-  <link href="style.css" rel="stylesheet">
-   <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
-
-    <!-- Navigation Bar started -->
+  <head>
+    <meta charset="UTF-8" />
+    <title>CoffeeStory Memories</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- Navigation Bar -->
     <nav class="navbar">
       <ul>
         <li><a href="/index.html">Home</a></li>
@@ -21,10 +17,53 @@
         <li><a href="/login-signup.html">Login/Signup</a></li>
       </ul>
     </nav>
-    <!-- Navigation Bar ends -->
-<h1 style="margin-top: 2cm;"> Our CoffeeStory memories </h1>
 
-  
+    <h1 style="margin-top: 2cm">Our CoffeeStory memories</h1>
+    <h3 id="coffee-memories">Our Best memories ⭐</h3>
 
-</body>
+    <!-- Gallery Section -->
+    <div class="gallery-container">
+      <div class="gallery">
+        <img
+          src="https://s3-media0.fl.yelpcdn.com/bphoto/uCj48Ot3Q7nrZYvSb_CnVg/348s.jpg"
+          alt="Coffee memory 1"
+        />
+        <img
+          src="https://s3-media0.fl.yelpcdn.com/bphoto/GFX_6Cn3YxPl66OKZH8lCw/348s.jpg"
+          alt="Coffee memory 2"
+        />
+        <img
+          src="https://s3-media0.fl.yelpcdn.com/bphoto/SaSUfzw6o4PHUhwy-iI-Dw/348s.jpg"
+          alt="Coffee memory 3"
+        />
+        <img
+          src="https://s3-media0.fl.yelpcdn.com/bphoto/cQgD8pPzHOm8Yj2h006AQA/348s.jpg"
+          alt="Coffee memory 4"
+        />
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3CMEE-YMZWFUi8KNpEGICkQcJBuPYmzks4A&s"
+          alt="Coffee memory 5"
+        />
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRqMn8CoLdFVn-D1XwuA1XTsm21URcKszYT8sUeGYudIAQ5P0KS3PSDkgj8YEcPbhDiVME&usqp=CAU"
+          alt="Coffee memory 6"
+        />
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ11cuvngKxyl1Y1WL8fPoqsDFhGOF4dnYRZcSShAiAe4zdJg4bhre1MW04QwI3m91-8G0&usqp=CAU"
+          alt="Coffee memory 7"
+        />
+        <img
+          src="https://images.squarespace-cdn.com/content/v1/5751fccea3360cbabb905ef4/1609382043195-9S6Z91P9Y2E23VOT9X8J/fpphoto-225.jpg?format=2500w"
+          alt="Coffee memory 8"
+        />
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-75aXe12g2brLYSpcMQsKsOfsEzBzioQotEyqsWSZ4_fhXqiW7qouVOWcm6v1Gxivk84&usqp=CAU"
+          alt="Coffee memory 9"
+        />
+      </div>
+    </div>
+  </body>
+  <footer class="footer" style="margin-top: 50px;">
+    <p>&copy; 2025 CoffeeStory. All rights reserved.</p>
+  </footer>
 </html>
