--- a/projects/index.html
+++ b/projects/index.html
@@ -113,10 +113,10 @@ contact form and login/signup section -->
         century, <br />
         tea was still the favored drink in the New World until King George III
         imposed a heavy tax on it in 1773. As you probably know, the tax ignited
-        significant <br />
+        significant 
         protest and led to the revolt known as the Boston Tea Party. As you may
         not know, that event didn’t just change the course of American
-        history—it forever <br />
+        history—it forever 
         changed Americans’ beverage preference to coffee.
       </p>
       <!-- Article Section ended -->
