--- a/projects/menu.html
+++ b/projects/menu.html
@@ -52,4 +52,7 @@
   </ul>
 
 </body>
+<footer class="footer" style="margin-top: 50px;">
+  <p>&copy; 2025 CoffeeStory. All rights reserved.</p>
+</footer>
 </html>
