updated login in /project

--- a/projects/contact.html
+++ b/projects/contact.html
@@ -24,7 +24,7 @@
   <!-- Hero Section -->
   <div class="contact-hero">
     <div class="hero-content">
-      <h1 class="hero-title" style="border-radius: 1cm;">Get in Touch</h1>
+      <h1 class="hero-title" style="border-radius: 1cm; margin-top: 1cm;">Get in Touch</h1>
       <p class="hero-subtitle">We'd love to hear from you! Let's brew something amazing together.</p>
     </div>
   </div>
